#[workspace]
#resolver = "2"

[package]
name = "randy-ratelimiting"
description = "Discord REST API ratelimiter implementations for randy."
repository = "https://github.com/swrge/randy-ratelimiting"
version = "0.1.0"
include = ["/src"]
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time"] }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1.23" }

[dev-dependencies]
criterion = { default-features = false, version = "0.5" }
http = { version = "1", default-features = false }
static_assertions = { default-features = false, version = "1.1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }

[[bench]]
name = "headers"
harness = false
path = "benches/headers.rs"
